[gd_scene load_steps=5 format=3 uid="uid://d1s08m4vgk5o8"]

[ext_resource type="Texture2D" uid="uid://ds34ftraa8krc" path="res://Sprites/Tilesets/Hex Basic Terrain Set/atlasbasictowers.png" id="1_ifmex"]
[ext_resource type="Script" uid="uid://bnstsymbayqn7" path="res://Scenes/Main/UI/towerbutton.gd" id="2_68f6q"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ehoa4"]
resource_local_to_scene = true
atlas = ExtResource("1_ifmex")
region = Rect2(0, 0, 256, 384)

[sub_resource type="LabelSettings" id="LabelSettings_ifmex"]

[node name="Button" type="Button"]
custom_minimum_size = Vector2(100, 100)
offset_right = 8.0
offset_bottom = 8.0
icon = SubResource("AtlasTexture_ehoa4")
expand_icon = true
script = ExtResource("2_68f6q")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 128.0
offset_bottom = 32.0
text = "Tower"
label_settings = SubResource("LabelSettings_ifmex")

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_top = 32.0
offset_right = 128.0
offset_bottom = 64.0
text = "Cost"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
